--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: flex-start;
       background-color: var(--White);
       
       padding: 1rem;
